--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   color: #777;
   padding: 30px; }
 
-/*-------------------Header Settings------------------------*/
+/*--------------------------------------------------------------Header Settings-------------------------------------------------------*/
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
@@ -157,6 +157,8 @@ body {
   margin-top: 3rem; }
   .row-wrapper:not(:last-child) {
     margin-bottom: 8rem; }
+  .row-wrapper .col-1 {
+    margin-right: 5rem; }
 
 .heading-tertiary {
   font-size: 1rem;
@@ -170,6 +172,9 @@ body {
 
 .u-margin-bottom-small {
   margin-bottom: 1.5rem !important; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem !important; }
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.2rem;
@@ -189,3 +194,30 @@ body {
 .btn-text:active {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0); }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+    transition: all .2s;
+    outline-offset: 1rem; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo--p3 {
+      left: 20%;
+      top: 10rem; }
+    .composition__photo:hover {
+      outline: 1.1rem solid #55c57a;
+      transform: scale(1.05) translateY(-0.5px);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
